@@ -5,7 +5,12 @@ TODO: maybe implement a default message channel, very much like Erlang's
       actor model (which is cool in a lot of important aspects (failures!),
       but very lacking in others (higher level ipc)).
 
-	- minor tuning.
+        - add default config for MirOS, which seems to be a bug-to-bug
+          compatible fork of openbsd ("world domination by releasing
+          openbsd cvs before the openbsd folks do it" or so :).
+        - use a different method to detect destruction time.
+        - be more careful when freeing padlists just before global
+          destruction.
 
 5.11 Tue Nov 25 21:49:05 CET 2008
 	- DEBUGGING in 5.10.0 is a mess: it constantly flags perfectly
